[package]
name = "Expressing_server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
hyper = "0.14"
mongodb = "3.3.0"
futures = "0.3"
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
